fix: Adjust arrow SVG position for improved alignment

--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ h1, section, p, span, svg {
 
 .arrow-svg-wrapper {
   position: absolute;
-  top: 90%;
+  top: 85%;
   left: 50%;
   opacity: 0;
   color: var(--color-text);
